# aider-app

./: .env.example  .gitignore  docker-compose.yml  package.json  pyproject.toml  requirements.txt  run.py
aider_app/: app.py  config.py
aider_app/blueprints/: __init__.py
aider_app/blueprints/auth/: __init__.py  forms.py  models.py  oauth.py  routes.py  utils.py
aider_app/blueprints/auth/templates/: login.html  register.html
aider_app/blueprints/auth/templates/auth/: login.html  register.html  reset_password.html
aider_app/blueprints/auth/templates/auth/errors/: 403.html  404.html  500.html
aider_app/blueprints/core/: __init__.py  routes.py
aider_app/extensions/: __init__.py  admin.py  cache.py  csrf.py  db.py  manager.py  migrate.py
aider_app/models/: core.py
aider_app/static/assets/css/: dark.css  style.css
aider_app/static/assets/scss/: dark.scss
aider_app/templates/: base.html
aider_app/templates/layouts/: base-fullscreen.html  base.html
aider_app/utils/: base_endpoints.py  initializers.py
